# fortipass

./: .gitignore  Cargo.toml  Makefile  README.md
fortipass/: Cargo.toml
fortipass-cli/: Cargo.toml
fortipass-cli/src/: file_manager.rs  key_creator.rs  main.rs  password_creator.rs  utils.rs
fortipass-core/: Cargo.toml
fortipass-core/src/: keymanager.rs  lib.rs  models.rs  passmanager.rs  utils.rs
fortipass-core/tests/: encryption.rs
